# PECR

./: .gitignore  .gitleaks.toml  AGENTS.md  BEAM_MIGRATION_PLAN.md  DECISIONS.md  LICENSE  NEXT_PHASE.md  PRODUCT_PRINCIPLES.md  README.md  REPO_FULL_SWEEP_TODO.md  RLM_FIRST_MIGRATION_PLAN.md  RUNBOOK.md  docker-compose.yml
.cargo/: audit.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  nightly-usefulness.yml  release.yml  rlm-real-backend-pre-release.yml  rlm-real-backend-smoke.yml  rlm-real-backend-usefulness.yml  security.yml  vendor-rlm-sync.yml
beam/pecr_planner/: .gitignore  README.md  mix.exs
beam/pecr_planner/lib/: pecr_planner.ex
beam/pecr_planner/scripts/: nightly_report.exs  plan_request.exs  shadow_cli.exs  usefulness_job.exs
beam/pecr_planner/test/: test_helper.exs
contracts/: contract-lock.json
crates/adapters/: Cargo.toml
crates/adapters/src/: lib.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/auth/tests/: oidc.rs
crates/auth/tests/fixtures/: test_jwks.json  test_rsa_private.pem
crates/boundary-check/: Cargo.toml
crates/boundary-check/src/: main.rs
crates/contracts/: Cargo.toml
crates/contracts/schemas/: Budget.v1.schema.json  Claim.v1.schema.json  ClaimEvidenceSnippet.v1.schema.json  ClaimMap.v1.schema.json  ContextBudget.v1.schema.json  EngineComparisonSummary.v1.schema.json  EngineMode.v1.schema.json  ErrorResponse.v1.schema.json  EvidencePackMode.v1.schema.json  EvidenceUnit.v1.schema.json  EvidenceUnitRef.v1.schema.json  PlanRequest.v1.schema.json  PlanResponse.v1.schema.json  PlannerHints.v1.schema.json  PlannerIntent.v1.schema.json  PlannerOperatorStep.v1.schema.json  PlannerRecoveryContext.v1.schema.json  PlannerSearchRefFetchSpanStep.v1.schema.json  PlannerStep.v1.schema.json  PolicySnapshot.v1.schema.json  ReplayBundle.v1.schema.json  ReplayBundleMetadata.v1.schema.json  ReplayEvaluationResult.v1.schema.json  ReplayEvaluationSubmission.v1.schema.json  ReplayPlannerDecisionSummary.v1.schema.json  ReplayPlannerTrace.v1.schema.json  ReplayRunScore.v1.schema.json  RunQualityScorecard.v1.schema.json  TerminalMode.v1.schema.json  TraceEvent.v1.schema.json
crates/contracts/src/: canonical.rs  lib.rs
crates/controller/: Cargo.toml
crates/controller/src/: config.rs  http.rs  lib.rs  main.rs  metrics.rs  replay.rs
crates/controller/src/http/: auth.rs  budget.rs  diagnostics.rs  finalize.rs  orchestration.rs  replay_api.rs  tests.rs
crates/e2e_smoke/: Cargo.toml
crates/e2e_smoke/src/: lib.rs
crates/e2e_smoke/tests/: smoke.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: config.rs  http.rs  lib.rs  main.rs  metrics.rs  opa.rs  operator_cache.rs  rate_limit.rs
crates/gateway/src/http/: auth.rs  diagnostics.rs  finalize.rs  operator.rs  operator_api.rs  policy.rs  policy_api.rs  runtime.rs  session.rs  session_api.rs  tests.rs
crates/ledger/: Cargo.toml
crates/ledger/migrations/: 20260203190000_init.sql  20260209000100_session_runtime.sql  20260217000100_index_review.sql
crates/ledger/src/: lib.rs
crates/ledger/tests/: migrations.rs
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs
db/init/: 001_ledger_schema.sql  002_safeview_fixtures.sql
docker/: controller.Dockerfile  gateway.Dockerfile
docs/: client_integration.md  useful_benchmark.md
docs/architecture/: controller_state_machine.md  invariants.md  planner_contract.md  request_path_blocking_audit.md  rlm_runtime_envelope.md
docs/enterprise/: QUALITY_GUARDRAILS.md
docs/observability/: README.md  baselines.md  rlm_real_backend_operations.md
docs/observability/alerts/: pecr_slo_alerts.yaml
docs/observability/dashboards/: pecr_budget_scheduler.dashboard.json  (+1 more)
docs/openapi/: contract_manifest.json  pecr.v1.yaml
docs/standards/: ARTIFACT_PROVENANCE_POLICY.md  EVALUATION_DATA_LIFECYCLE.md  OBSERVABILITY_STACK_TARGET.md  POLICY_SIMULATION_CONTRACT.md  RELIABILITY_PATTERNS.md  REPLAY_PERSISTENCE_MODEL.md  ROLLOUT_CONTROL_PLANE_CONTRACT.md
opa/bundle/: .manifest  policy.rego
perf/baselines/: suite7_baseline.summary.json
perf/config/: suite7_expectations.v1.json
scripts/: ci.sh  run_useful_e2e.sh  validate_openapi.py  validate_workflows.py  verify.ps1  verify.sh
scripts/contracts/: check_contract_lock.py  update_contract_lock.py
scripts/demo/: useful_workflows.py
scripts/k6/: suite7_controller_run.js  suite7_gateway_fetch_rows_timeout.js
scripts/ops/: canary_rollout_guard.py  check_real_backend_promotion_gate.py  test_canary_rollout_guard.py  test_real_backend_promotion_gate.py
scripts/perf/: benchmark_matrix.py  check_bvr_ser.py  compare_k6_baseline.py  select_median_summary.py  suite7.sh  test_perf_tooling.py
scripts/planner/: beam_shadow_http_bridge.py
scripts/replay/: OPERATOR_CONTRACT_CHECKLIST.md  nightly_usefulness_report.py  regression_gate.py  replay_eval_cli.py  replay_lib.py  run_beam_usefulness_job.py  run_operator_contract_tests.py  useful_benchmark_cli.py
scripts/rlm/: openai_bridge_smoke.py  pecr_rlm_bridge.py  sync_vendor_rlm.py  verify_vendor_rlm.py
scripts/security/: check_image_tags.py  release_smoke_check.py  verify_release_attestations.py
scripts/tests/: test_contract_lock.py  test_demo_scripts.py  test_gate_scripts.py  test_release_security_scripts.py  test_replay_scripts.py  test_rlm_bridge.py  test_rlm_vendor_sync.py  test_validate_openapi.py  test_validate_workflows.py
(+38 files in other folders)
