[package]
name = "pecr-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
http = "1"
jsonwebtoken = { version = "9", features = ["use_pem"] }
pecr-contracts = { path = "../contracts" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
