[package]
name = "pecr-controller"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
pecr-auth = { path = "../auth" }
pecr-contracts = { path = "../contracts" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ulid = "1"
prometheus = "0.13"
opentelemetry = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.32.1"

[features]
default = []
# Optional experimental controller engine powered by the vendored upstream `alexzhang13/rlm` repo.
rlm = []
