[package]
name = "e2e_smoke"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
hex = "0.4"
pecr-controller = { path = "../controller" }
pecr-contracts = { path = "../contracts" }
pecr-gateway = { path = "../gateway" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
